--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -15,7 +15,12 @@
                             <h2>{{ post.title }}</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
-                            <p>{{ post.description }}</p>
+                            <!-- <p>{{ post.description }}</p> -->
+
+                            {% for text_hash in page.text %}
+                                <p>{{ text[1] }}</a>
+                            {% endfor %}
+                            <!-- 
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">{{ post.client }}</a>
@@ -30,6 +35,7 @@
                                     </strong>
                                 </li>
                             </ul>
+                        -->
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
