--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -17,9 +17,9 @@
                             <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
                             <!-- <p>{{ post.description }}</p> -->
 
-                            {% for text in page.text %}
-                                <p>{{ text[0] }}</a>
-                            {% endfor %}
+                            
+                             {{content}}
+                            
                             <!-- 
                             <ul class="list-inline item-details">
                                 <li>Client:
