--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -18,7 +18,7 @@
                             <!-- <p>{{ post.description }}</p> -->
 
                             
-                             {{content}}
+                             {{post.content}}
                             
                             <!-- 
                             <ul class="list-inline item-details">
