--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -16,10 +16,11 @@
                             <hr class="star-primary">
                             <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
                             <!-- <p>{{ post.description }}</p> -->
+                            <div style="font-size: 14px">
 
                             
-                             {{post.content | markdownify}}
-                            
+                             {{post.content}}
+                            </div>
                             <!-- 
                             <ul class="list-inline item-details">
                                 <li>Client:
