--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -16,7 +16,7 @@
                             <hr class="star-primary">
                             <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
                             <!-- <p>{{ post.description }}</p> -->
-                            <div style="font-size: 24px">
+                            <div style="font-size: 14px;">
 
                             
                              {{post.content}}
