--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -407,6 +407,7 @@ section h3.section-subheading {
     padding: 25px;
     max-width: 400px;
     min-height: 100px;
+    display:block;
     text-align: center;
     background-color: #fff;
 }
