--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -172,7 +172,7 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar-default {
     border-color: transparent;
-    background-color: #ff9933;
+    background-color: #{{ site.data.template.color.secondary }};
 }
 
 .navbar-default .navbar-brand {
