--- a/_includes/header.html
+++ b/_includes/header.html
@@ -45,7 +45,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-heading">Build for Developers</div>
-                <div class="intro-lead-in">Application developers as customers in API Economy</div>
+                <div class="intro-lead-in">Book about Application Developers as Customers in API Economy</div>
                 
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
