--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -289,6 +289,8 @@ header .intro-text .intro-lead-in {
     font-size: 22px;
     font-style: italic;
     line-height: 22px;
+    margin-left: 100px;
+    margin-right: 100px;
 }
 
 header .intro-text .intro-heading {
