Modded book themes texts

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -21,7 +21,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-gears fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Developer-first approach in product development</h4>
+                    <h4 class="service-heading">Developer-first approach</h4>
                     <p class="text-muted">We'll go through features and aspects on API development to focus on while keeping primary customer - application developer at the center. You will lean what kind of team you'll need to craft loves your customers will love.</p>
                 </div>
                 <div class="col-md-4">
