Modded book themes texts

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -30,7 +30,7 @@
                         <i class="fa fa-signal fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Business to Developer marketing</h4>
-                    <p class="text-muted">In the last part we'll guide you towards successful business developer marketing (B2D). You'll learn how to get started and things to avoid. </p>
+                    <p class="text-muted">In the last part we'll guide you towards successful business developer marketing (B2D). You'll learn how to get started and things to avoid. Without proper marketing your efforts have been in vain and waste of time and resources.</p>
                 </div>
             </div>
         </div>
