--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Chapters</h2>
-                    <h3 class="section-subheading text-muted">Some of the planned chapters. You'll find epilogue of each chapter by clicking the items. The list will grow as the work goes forward. Stay tuned and follow hashtag #Build4Devs in Twitter and Instagram!</h3>
+                    <h3 class="section-subheading text-muted">Some of the planned chapters. You'll find epilogue of each chapter by clicking the items. The list will grow as the work goes forward. <br/><b>Stay tuned and follow hashtag #Build4Devs in Twitter and Instagram!</b></h3>
                 </div>
             </div>
             <div class="row">
