--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -340,9 +340,10 @@ section h3.section-subheading {
     margin-bottom: 75px;
     text-transform: none;
     font-family: {{ site.data.template.font.secondary }};
-    font-size: 16px;
+    font-size: 18px;
     font-style: italic;
     font-weight: 400;
+    line-height: 30px;
 }
 
 @media(min-width:768px) {
