--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -285,7 +285,8 @@ header .intro-text {
 
 header .intro-text .intro-lead-in {
     margin-bottom: 25px;
-    font-family: {{ site.data.template.font.tertiary }};
+    font-family: {{ site.data.template.font.secondary }};
+    font-color: #{{ site.data.template.color.tertiary }};
     font-size: 22px;
     font-style: italic;
     line-height: 42px;
@@ -296,7 +297,8 @@ header .intro-text .intro-lead-in {
 header .intro-text .intro-heading {
     margin-bottom: 25px;
     text-transform: uppercase;
-    font-family: {{ site.data.template.font.tertiary }};
+    font-family: {{ site.data.template.font.secondary }};
+    font-color: #{{ site.data.template.color.tertiary }};
     font-size: 45px;
     font-weight: 700;
     line-height: 70px;
