--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -265,11 +265,79 @@ fieldset[disabled] .btn-xl.active {
     }
 }
 
+/* 
+
+COLORS
+
+*/
+
+/* CSS - Cascading Style Sheet */
+/* Palette color codes */
+/* Palette URL: http://paletton.com/#uid=7000u0knoerfymWjahXs09YzX5G */
+
+/* Feel free to copy&paste color codes to your application */
+
+
+/* As hex codes */
+
+.color-primary-0 { color: #731F1F } /* Main Primary color */
+.color-primary-1 { color: #B75E5E }
+.color-primary-2 { color: #8F3939 }
+.color-primary-3 { color: #4F0A0A }
+.color-primary-4 { color: #2D0000 }
+
+.color-secondary-1-0 { color: #73451F } /* Main Secondary color (1) */
+.color-secondary-1-1 { color: #B7865E }
+.color-secondary-1-2 { color: #8F6039 }
+.color-secondary-1-3 { color: #4F290A }
+.color-secondary-1-4 { color: #2D1400 }
+
+.color-secondary-2-0 { color: #134545 } /* Main Secondary color (2) */
+.color-secondary-2-1 { color: #386E6E }
+.color-secondary-2-2 { color: #225656 }
+.color-secondary-2-3 { color: #063030 }
+.color-secondary-2-4 { color: #001B1B }
+
+.color-complement-0 { color: #195C19 }  /* Main Complement color */
+.color-complement-1 { color: #4B924B }
+.color-complement-2 { color: #2E722E }
+.color-complement-3 { color: #083F08 }
+.color-complement-4 { color: #002400 }
+
+
+/* As RGBa codes */
+
+.rgba-primary-0 { color: rgba(115, 31, 31,1) }  /* Main Primary color */
+.rgba-primary-1 { color: rgba(183, 94, 94,1) }
+.rgba-primary-2 { color: rgba(143, 57, 57,1) }
+.rgba-primary-3 { color: rgba( 79, 10, 10,1) }
+.rgba-primary-4 { color: rgba( 45,  0,  0,1) }
+
+.rgba-secondary-1-0 { color: rgba(115, 69, 31,1) }  /* Main Secondary color (1) */
+.rgba-secondary-1-1 { color: rgba(183,134, 94,1) }
+.rgba-secondary-1-2 { color: rgba(143, 96, 57,1) }
+.rgba-secondary-1-3 { color: rgba( 79, 41, 10,1) }
+.rgba-secondary-1-4 { color: rgba( 45, 20,  0,1) }
+
+.rgba-secondary-2-0 { color: rgba( 19, 69, 69,1) }  /* Main Secondary color (2) */
+.rgba-secondary-2-1 { color: rgba( 56,110,110,1) }
+.rgba-secondary-2-2 { color: rgba( 34, 86, 86,1) }
+.rgba-secondary-2-3 { color: rgba(  6, 48, 48,1) }
+.rgba-secondary-2-4 { color: rgba(  0, 27, 27,1) }
+
+.rgba-complement-0 { color: rgba( 25, 92, 25,1) }   /* Main Complement color */
+.rgba-complement-1 { color: rgba( 75,146, 75,1) }
+.rgba-complement-2 { color: rgba( 46,114, 46,1) }
+.rgba-complement-3 { color: rgba(  8, 63,  8,1) }
+.rgba-complement-4 { color: rgba(  0, 36,  0,1) }
+
+
+
 header {
     text-align: center;
     color: #fff;
     background-attachment: scroll;
-    background-image: url('img/header-bg3.jpg');
+    background-image: url('img/header-bg4.jpg');
     background-position: center center;
     background-repeat: none;
     -webkit-background-size: cover;
