--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -353,7 +353,7 @@ header .intro-text {
 
 header .intro-text .intro-lead-in {
     margin-bottom: 25px;
-    font-family: {{ site.data.template.font.secondary }};
+    font-family: {{ site.data.template.font.primary }};
     color: #{{ site.data.template.color.tertiary }};
     font-size: 22px;
     font-style: italic;
@@ -365,7 +365,7 @@ header .intro-text .intro-lead-in {
 header .intro-text .intro-heading {
     margin-bottom: 25px;
     text-transform: uppercase;
-    font-family: {{ site.data.template.font.secondary }};
+    font-family: {{ site.data.template.font.primary }};
     color: #{{ site.data.template.color.tertiary }};
     font-size: 45px;
     font-weight: 700;
