--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -127,7 +127,7 @@ fieldset[disabled] .btn-primary.active {
     font-size: 18px;
     font-weight: 700;
     color: #fff;
-    background-color: #{{ site.data.template.color.secondary-dark }};
+    background-color: #{{ site.data.template.color.primary }};
 }
 
 .btn-xl:hover,
@@ -137,7 +137,7 @@ fieldset[disabled] .btn-primary.active {
 .open .dropdown-toggle.btn-xl {
     border-color: #{{ site.data.template.color.primary }};
     color: #fff;
-    background-color: #{{ site.data.template.color.secondary-dark }};
+    background-color: #{{ site.data.template.color.primary }};
 }
 
 .btn-xl:active,
@@ -162,12 +162,12 @@ fieldset[disabled] .btn-xl:active,
 .btn-xl[disabled].active,
 fieldset[disabled] .btn-xl.active {
     border-color: #{{ site.data.template.color.primary }};
-    background-color: #{{ site.data.template.color.secondary-dark }};
+    background-color: #{{ site.data.template.color.primary }};
 }
 
 .btn-xl .badge {
     color: #{{ site.data.template.color.primary }};
-    background-color: #{{ site.data.template.color.secondary-dark }};
+    background-color: #fff;
 }
 
 .navbar-default {
