--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -85,7 +85,7 @@ h6 {
 .open .dropdown-toggle.btn-primary {
     border-color: #{{ site.data.template.color.primary }};
     color: #fff;
-    background-color: #{{ site.data.template.color.primary }};
+    background-color: #{{ site.data.template.color.secondary-dark }};
 }
 
 .btn-primary:active,
