--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -193,7 +193,7 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar-default .navbar-toggle {
     border-color: #{{ site.data.template.color.primary }};
-    /* background-color: #{{ site.data.template.color.primary }};*/
+    background-color: #{{ site.data.template.color.secondary-dark }};*/
 }
 
 .navbar-default .navbar-toggle .icon-bar {
