--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -193,12 +193,11 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar-default .navbar-toggle {
     border-color: #{{ site.data.template.color.primary }};
-    background-color: #{{ site.data.template.color.secondary-dark }};*/
+    background-color: #{{ site.data.template.color.secondary-dark }};
 }
 
 .navbar-default .navbar-toggle .icon-bar {
-    background-color: #fff;
-}
+    background-color: #{{ site.data.template.color.secondary-dark }};
 
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
