--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -15,7 +15,7 @@ body {
 }
 
 .text-primary {
-    color: #{{ site.data.template.color.secondary-dark }};
+    color: #{{ site.data.template.color.primary }};
 }
 
 p {
