--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -202,7 +202,7 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-    background-color: #{{ site.data.template.color.secondary-dark }};
+    background-color: #{{ site.data.template.color.primary }};
 }
 
 .navbar-default .nav li a {
