--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -137,7 +137,7 @@ fieldset[disabled] .btn-primary.active {
 .open .dropdown-toggle.btn-xl {
     border-color: #{{ site.data.template.color.primary }};
     color: #fff;
-    background-color: #3d1010;
+    /*background-color: #3d1010;*/
 }
 
 .btn-xl:active,
