--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -137,7 +137,7 @@ fieldset[disabled] .btn-primary.active {
 .open .dropdown-toggle.btn-xl {
     border-color: #{{ site.data.template.color.primary }};
     color: #fff;
-    background-color: #{{ site.data.template.color.primary }};
+    /*background-color: #{{ site.data.template.color.primary }};*/
 }
 
 .btn-xl:active,
@@ -145,7 +145,7 @@ fieldset[disabled] .btn-primary.active {
 .open .dropdown-toggle.btn-xl {
     background-image: none;
     color: #{{ site.data.template.color.primary }};
-    background-color: #{{ site.data.template.color.tertiary }};
+    /*background-color: #{{ site.data.template.color.tertiary }};*/
 }
 
 .btn-xl.disabled,
