--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -410,10 +410,10 @@ section h2.section-heading {
 }
 
 section h3.section-subheading {
-    color: #{{ site.data.template.color.primary }};
+    color: #{{ site.data.template.color.muted }};
     margin-bottom: 75px;
     text-transform: none;
-    font-family: {{ site.data.template.font.secondary }};
+    font-family: {{ site.data.template.font.primary }};
     font-size: 20px;
     font-weight: 400;
     line-height: 30px;
