Modded section subheading font and color

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -14,7 +14,7 @@
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">APIs as products</h4>
-                    <p class="text-muted">In part one you'll learn why APIs should be seen as products and what it means in practise. We will use existing great productised APIs as examples to avoid only theoretical viewpoints. </p>
+                    <p class="text-muted">In part one you'll learn why APIs should be seen as products and what it means in practise. We will use existing great productised APIs as examples to avoid purely theoretical viewpoint. </p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -22,7 +22,7 @@
                         <i class="fa fa-gears fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Developer-first approach</h4>
-                    <p class="text-muted">In second part we'll go through features and aspects on API development to focus on while keeping primary customer - application developer at the center. You will lean what kind of team you'll need to craft loves your customers will love and why APIs mentioned in part are successful.</p>
+                    <p class="text-muted">In second part we'll go through features and aspects on API development to focus on while keeping primary customer - application developer at the center. You will learn what kind of team you'll need to craft APIs your customers will love and why APIs mentioned in part are successful.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
