--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -491,6 +491,7 @@ section h3.section-subheading {
     text-transform: none;
     min-height: 50px;
     display:block;
+    color: #{{ site.data.template.color.muted }};
 }
 
 #portfolio .portfolio-item .portfolio-caption p {
