--- a/_includes/team.html
+++ b/_includes/team.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Responsibility of the book is with Jarkko Moilanen, but developers are invited to the team as Advisors to ensure bullshit-free content. Advisors do not write or code in this project.</h3>
                 </div>
             </div>
             <div class="row">
