--- a/_includes/team.html
+++ b/_includes/team.html
@@ -30,7 +30,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                    <p class="large text-muted">The book discussed serious topics, but this has to be fun. Jarkko has promised to keep open mind for new thoughts. The group can have different opinions, but respect each other. Too serious people should not bother to contact us.</p>
                 </div>
             </div>
         </div>
