--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Planned schedule</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">The need for book is now. Thus we aim to write it before summer 2019. </h3>
                 </div>
             </div>
             <div class="row">
@@ -16,11 +16,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
-                                    <h4 class="subheading">Our Humble Beginnings</h4>
+                                    <h4>Nov 2018 - 2% done</h4>
+                                    <h4 class="subheading">Fix preliminary structure</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">In November 2018 we have fixed preliminary structure and topics to cover as well as timetable for each chapter. This is now done. Selected three themes are introduced above. Chapter topics for the themes have also been decided and writing has begun.</p>
                                 </div>
                             </div>
                         </li>
@@ -30,11 +30,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">An Agency is Born</h4>
+                                    <h4>Dec 15th 2018 - 22% done</h4>
+                                    <h4 class="subheading">First 5 chapters</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">At this stage Part I - "APIs as Products" is done as well as Preface. Each chapter will have around 8 pages. Of course some of them will have more some less. Topics to be discussed are value proposition, APIs after data APIS, primary customer (developer), business models and team composition in API development.</p>
                                 </div>
                             </div>
                         </li>
@@ -44,11 +44,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
+                                    <h4>Jan 15th 2019 - 47% done</h4>
+                                    <h4 class="subheading">Half way</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Developer-first approach chapter will be mostly written. Some of the topics to be discussed are developer experience, tools and tool development as well as distribution, sales and support, getting started with API and documentation. </p>
                                 </div>
                             </div>
                         </li>
