Mod schedule content for half way

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -48,7 +48,7 @@
                                     <h4 class="subheading">Half way</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Developer-first approach chapter will be mostly written. Some of the topics to be discussed are developer experience, tools and tool development as well as distribution, sales and support, getting started with API and documentation. </p>
+                                    <p class="text-muted">Second Part "Developer-first approach" will be mostly written. Some of the topics to be discussed are developer experience, tools and tool development as well as distribution, sales and support, getting started with API and documentation. </p>
                                 </div>
                             </div>
                         </li>
