Mod schedule content

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -58,19 +58,33 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>July 2014</h4>
-                                    <h4 class="subheading">Phase Two Expansion</h4>
+                                    <h4>Feb 15th 2019</h4>
+                                    <h4 class="subheading">Marketing</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Last chapters of part II are written and at this stage Part III Business to Developer Marketing is mostly done. Topics to be discussed include developer relations, what is B2D, channels, support, advocacy and communication tone and style.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>Feb 15th 2019</h4>
+                                    <h4 class="subheading">Marketing</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Last chapters of part II are written and at this stage Part III Business to Developer Marketing is mostly done. Topics to be discussed include developer relations, what is B2D, channels, support, advocacy and communication tone and style.</p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4>Be Part
-                                    <br>Of Our
-                                    <br>Story!</h4>
+                                <h4>March 15th
+                                    <br>2019
+                                    <br>100%</h4>
                             </div>
                         </li>
                     </ul>
