--- a/_includes/services.html
+++ b/_includes/services.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Themes covered</h2>
-                    <h3 class="section-subheading text-muted">The book is built around three themes, each of which is one part of the book. </h3>
+                    <h3 class="section-subheading text-muted">The book is built around three themes, each of which is one part of the book. The three themes are wrapped up in final Developer Portal focused part.</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -14,7 +14,7 @@
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">APIs as products</h4>
-                    <p class="text-muted">In part one you'll learn why APIs should be seen as products and what it means in practise. We will use existing great productised APIs as examples to avoid purely theoretical viewpoint. </p>
+                    <p class="text-muted">In the part one you'll learn why APIs should be seen as products and what it means in practise. We will use existing great productised APIs as examples to avoid purely theoretical viewpoint. </p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -22,7 +22,7 @@
                         <i class="fa fa-gears fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Developer-first approach</h4>
-                    <p class="text-muted">In second part we'll go through features and aspects on API development to focus on while keeping primary customer - application developer at the center. You will learn what kind of team you'll need to craft APIs your customers will love and why APIs mentioned in part are successful.</p>
+                    <p class="text-muted">In the second part we'll go through features and aspects on API development to focus on while keeping primary customer - application developer at the center. You will learn what kind of team you'll need to craft APIs your customers will love and why APIs mentioned in part are successful.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -30,7 +30,7 @@
                         <i class="fa fa-signal fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Business to Developer marketing</h4>
-                    <p class="text-muted">In the last part we'll guide you towards successful business developer marketing (B2D). You'll learn how to get started and things to avoid. Without proper marketing your efforts have been in vain and waste of time and resources.</p>
+                    <p class="text-muted">In the third part we'll guide you towards successful business developer marketing (B2D). You'll learn how to get started and things to avoid. Without proper marketing your efforts have been in vain and waste of time and resources. All the topics discussed previously are wrapped up in separate concluding part about Developer portals.</p>
                 </div>
             </div>
         </div>
