Mod schedule content

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -58,7 +58,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Feb 15th 2019</h4>
+                                    <h4>Feb 15th 2019 - 75% done</h4>
                                     <h4 class="subheading">Marketing</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -68,21 +68,21 @@
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/5.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Feb 15th 2019</h4>
-                                    <h4 class="subheading">Marketing</h4>
+                                    <h4>March 15th 2019 - 98% done</h4>
+                                    <h4 class="subheading">Final chapters</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Last chapters of part II are written and at this stage Part III Business to Developer Marketing is mostly done. Topics to be discussed include developer relations, what is B2D, channels, support, advocacy and communication tone and style.</p>
+                                    <p class="text-muted">Finally last chapters of the book are written about marketing and concluding part about developer portals are also finalized. After this starts the hard work of refactoring the content towards final manuscript to be published. Aim is to get all done by April 15th 2019.</p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4>March 15th
+                                <h4>April 15th
                                     <br>2019
                                     <br>100%</h4>
                             </div>
