--- a/_includes/team.html
+++ b/_includes/team.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Our Amazing Team</h2>
+                    <h2 class="section-heading">Our Team</h2>
                     <h3 class="section-subheading text-muted">Responsibility of the book is with Jarkko Moilanen, but developers are invited to the team as Advisors to ensure bullshit-free content. Advisors do not write or code in this project. Their task is peer review in the extend they see fit. If you want to be in the Advisory role and have access to book content, contact author (details below).</h3>
                 </div>
             </div>
