Mod service heading css

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -428,6 +428,7 @@ section h3.section-subheading {
 .service-heading {
     margin: 15px 0;
     text-transform: none;
+    color: #{{ site.data.template.color.primary }};
 }
 
 #portfolio .portfolio-item {
