--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -3,24 +3,19 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/envato.jpg" class="img-responsive img-centered" alt="">
-                    </a>
+                    <h2 class="section-heading">Use & Follow #Build4Devs</h2>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/designmodo.jpg" class="img-responsive img-centered" alt="">
-                    </a>
+                    <h2 class="section-heading">Use & Follow #Build4Devs</h2>
+                </div>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">
-                    </a>
+                    <h2 class="section-heading">Use & Follow #Build4Devs</h2>
+                </div>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
-                    </a>
+                    <h2 class="section-heading">Use & Follow #Build4Devs</h2>
+                </div>
                 </div>
             </div>
         </div>
