--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -13,21 +13,23 @@
                             <div class="col-md-6">
                                 <div class="control-group form-group">
                                     
-                                    <p>Text 1</p>
+                                    <p>Jarkko Moilanen (PhD)</p>
                                 </div>
                                 <div class="control-group form-group">
                                     
-                                    <p>Text 2</p>
+                                    <p>+358 40 535 9066</p>
                                 </div>
                                 <div class="control-group form-group">
                                     
-                                    <p>Text 3</p>
+                                    <p>jarkko(at)vimo.fi</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="control-group form-group">
                                     
-                                    <p>Text 4</p>
+                                    <p>You can support us by sharing this page in social media. Use hashtag #Build4Devs in your posts.</p>
+
+                                    <p>Tweet now!</p>
                                 </div>
                             </div>
                             <div class="clearfix"></div>
