--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -29,7 +29,8 @@
                                     
                                     <p>You can support us by sharing this page in social media. Use hashtag #Build4Devs in your posts.</p>
 
-                                    <p>Tweet now!</p>
+                                    <h3>Follow hashtag!</h3>
+                                    <img src="img/hashtag.png"/>
                                 </div>
                             </div>
                             <div class="clearfix"></div>
