--- a/_includes/services.html
+++ b/_includes/services.html
@@ -36,6 +36,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h3 class="section-subheading text-muted">All the topics discussed previously are wrapped up in separate concluding part about Developer portals.</h3>
+                    <h3 class="section-subheading text-muted">Planned chapters are introduced below as well as schedule. </h3>
                 </div>
             </div>
         </div>
