--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -869,6 +869,7 @@ ul.social-buttons li a:active {
     background-clip: border-box;
     -webkit-box-shadow: none;
     box-shadow: none;
+    color: #000;
 }
 
 .portfolio-modal .modal-content h2 {
