--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -30,7 +30,9 @@
                                     <p>You can support us by sharing this page in social media. Use hashtag #Build4Devs in your posts.</p>
 
                                     <h3>Show your support!</h3>
-                                    <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fbuildfordevelopers.com&text=Developers%20as%20Customer%20in%20API%20Economy%20book%20project%20&hashtags=Build4Devs%2CAPI%2CDX"><img src="/img/hashtag.png"/></a>
+                                    <!-- <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fbuildfordevelopers.com&text=Developers%20as%20Customer%20in%20API%20Economy%20book%20project%20&hashtags=Build4Devs%2CAPI%2CDX"><img src="/img/hashtag.png"/></a>
+                                    -->
+                                    <img src="/img/hashtag.png"/>
                                 </div>
                             </div>
                             <div class="clearfix"></div>
