--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Chapters</h2>
-                    <h3 class="section-subheading text-muted">Some of the planned chapters. You'll find epilogue of each chapter by clicking the items. <br/>Biweekly atleast one chapter will be revealed! <br/>The list will grow as the work goes forward. <br/>Stay tuned and follow hashtag <a href="https://twitter.com/search?f=tweets&q=%23Build4Devs&src=typd">#Build4Devs</a> in Twitter and Instagram!</h3>
+                    <h3 class="section-subheading text-muted">Some of the planned chapters. You'll find epilogue of each chapter by clicking the items. <br/>The list will grow as the work goes forward and new chapters are introduced around every second week. <br/>Stay tuned and follow hashtag <a href="https://twitter.com/search?f=tweets&q=%23Build4Devs&src=typd">#Build4Devs</a> in Twitter and Instagram!</h3>
                 </div>
             </div>
             <div class="row">
