--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,13 +19,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Themes</a>
+                        <a class="page-scroll" href="#themes">Themes</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Chapters</a>
+                        <a class="page-scroll" href="#chapters">Chapters</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">Schedule</a>
+                        <a class="page-scroll" href="#schedule">Schedule</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#team">Team</a>
