--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -11,15 +11,17 @@
             {% for post in site.posts %}
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
+                        <!-- 
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <!-- <i class="fa fa-plus fa-3x"></i>-->
+                                <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
+                        -->
                         <img src="img/portfolio/{{ post.thumbnail }}" class="img-responsive img-centered" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>{{ post.title }}</h4>
+                        <h4 style="color:#571717;">{{ post.title }}</h4>
                         <p class="text-muted">{{ post.subtitle }}</p>
                     </div>
                 </div>
