--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -501,8 +501,9 @@ section h3.section-subheading {
 }
 
 #portfolio .portfolio-item .portfolio-caption p {
-    margin: 0;
+    margin: 0; auto;
     font-family: {{ site.data.template.font.primary }};
+    text-align: center;
     font-size: 16px;
     font-style: italic;
 }
