--- a/_includes/header.html
+++ b/_includes/header.html
@@ -47,7 +47,7 @@
                 <div class="intro-heading">Build for Developers</div>
                 <div class="intro-lead-in">Book about Application Developers as Customers in API Economy</div>
                 
-                <a href="#services" class="page-scroll btn btn-xl" style="color:#000;">What's included?</a>
+                <a href="#themes" class="page-scroll btn btn-xl" style="color:#000;">What's included?</a>
             </div>
         </div>
     </header>
