--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
                         <a class="page-scroll" href="#themes">Themes</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#chapters">Chapters</a>
+                        <a class="page-scroll" href="#portofolio">Chapters</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#schedule">Schedule</a>
