--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -21,7 +21,7 @@
                         <img src="img/portfolio/{{ post.thumbnail }}" class="img-responsive img-centered" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <!-- <h4 style="color:#571717;">{{ post.title }}</h4> -->
+                        <h4 style="color:#571717;">{{ post.title }}</h4> 
                         <p class="text-muted">{{ post.subtitle }}</p>
                     </div> 
                 </div>
