--- a/_includes/services.html
+++ b/_includes/services.html
@@ -14,7 +14,7 @@
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">APIs as products</h4>
-                    <p class="text-muted">In the part one you'll learn why APIs should be seen as products and what it means in practise. We will use existing great productised APIs as examples to avoid purely theoretical viewpoint. </p>
+                    <p class="text-muted">In the part one you'll learn why APIs should be seen as products and what it means in practice. We will use existing great productised APIs as examples to avoid purely theoretical viewpoint. </p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
