--- a/_includes/services.html
+++ b/_includes/services.html
@@ -22,7 +22,7 @@
                         <i class="fa fa-gears fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Developer-first approach</h4>
-                    <p class="text-muted">In the second part we'll go through features and aspects on API development to focus on while keeping primary customer - application developer at the center. You will learn what kind of team you'll need to craft APIs your customers will love and why APIs mentioned in part are successful.</p>
+                    <p class="text-muted">In the second part we'll go through features and aspects on API development to focus on while keeping primary customer - application developer at the center. You will learn what kind of team you'll need to craft APIs your customers will love and why APIs mentioned in part I are successful.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
