--- a/_includes/services.html
+++ b/_includes/services.html
@@ -35,7 +35,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">All the topics discussed previously are wrapped up in separate concluding part about Developer portals.</h2>
+                    <h4 class="service-heading">All the topics discussed previously are wrapped up in separate concluding part about Developer portals.</h4>
                     <h3 class="section-subheading text-muted">Planned chapters are introduced below as well as schedule. </h3>
                 </div>
             </div>
