Added subscribe to top navi

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,6 +33,9 @@
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" style="background-color: #571717" target="new" href="https://jarkkomoilanen.typeform.com/to/KmeSPv">Subscribe</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
