Mod navi links, to blog

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,7 +34,7 @@
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                     <li>
-                        <a class="page-scroll" style="background-color: #571717;" target="new" href="https://jarkkomoilanen.typeform.com/to/KmeSPv">Subscribe</a>
+                        <a class="page-scroll" style="background-color: #571717;" target="new" href="https://medium.com/build-for-developers">Blog</a>
                     </li>
                 </ul>
             </div>
