Modified publishing part

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -96,6 +96,7 @@
                     <h3 class="section-subheading text-muted">Publishing plan is fixed. Book will be published via Leanpub (self-publishing). The book will be available before it is completely finished. Ordering the book before finalized version will help me write the rest of it. You will get updates for free as the book goes forward. </h3>
                 </div>
                 <div class="col-lg-12 text-center">
+                    <h3 class="section-subheading text-muted">First chapters will be available soon to give you a glimpse of what's coming. </h3>
                     <a href="https://leanpub.com/buildfordevelopers" target="new" class="page-scroll btn btn-xl" style="color:#000;">Buy it now!</a>
                 </div>
             </div>
