Added book picture

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -42,6 +42,7 @@
             <div class="intro-text text-center">
                 
                 <a href="https://jarkkomoilanen.typeform.com/to/KmeSPv" target="new" class="page-scroll btn btn-xl" style="color:#000;">Join mailing list!</a>
+                <img class="img-responsive" src="img/3d.png" alt="">
             </div>
         </div>
     </section>
