--- a/_includes/header.html
+++ b/_includes/header.html
@@ -48,7 +48,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-heading">Build for Developers</div>
-                <div class="intro-lead-in">Book about Application Developers as Customers in the API Economy</div>
+                <div class="intro-lead-in">Developers as Customers in the API Economy</div>
                 
                 <a href="#themes" class="page-scroll btn btn-xl" style="color:#000;">What's included?</a>
                 <a href="https://leanpub.com/buildfordevelopers" target="new" class="page-scroll btn btn-xl" style="color:#000;">Buy it now!</a>
